--- a/WhatsGoingNearby/Info.plist
+++ b/WhatsGoingNearby/Info.plist
@@ -8,6 +8,8 @@
 	</array>
 	<key>FirebaseAppDelegateProxyEnabled</key>
 	<false/>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
