--- a/WhatsGoingNearby/Info.plist
+++ b/WhatsGoingNearby/Info.plist
@@ -10,5 +10,11 @@
 	<false/>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>location</string>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
